Implement Basic File Setup for TicTacToe

--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -1,2 +1,18 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Jacob's TicTactToe Mini</title>
+  </head>
 
+  <header>
+    <h1> TIC TAC TOE</h1>
+  </header>
+  <script id="test" type="text/javascript" src="app.js"></script>
+  <body>
+    <p> This is the body of my page</p>
+    <p id="test"> This should be replaced</p>
+  </body>
+  <footer> Created by: Jacob Johnson || HRSF130</footer>
+</html>
 
