Implement Table HTML Structure for TicTacToe

--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -8,11 +8,31 @@
   <header>
     <h1> TIC TAC TOE</h1>
   </header>
-  <script id="test" type="text/javascript" src="app.js"></script>
   <body>
-    <p> This is the body of my page</p>
     <p id="test"> This should be replaced</p>
+    <script id="test" type="text/javascript" src="app.js"></script>
+
+    <table>
+      <tr>
+        <td style="color: red"> Row 1 Column 1</td>
+        <td style="color: green"> Row 1 Column 2</td>
+        <td style="color: blue"> Row 1 Column 3</td>
+      </tr>
+      <tr>
+        <td style="color: red"> Row 2 Column 1</td>
+        <td style="color: green"> Row 2 Column 2</td>
+        <td style="color: blue"> Row 2 Column 3</td>
+      </tr>
+      <tr>
+        <td style="color: red"> Row 3 Column 1</td>
+        <td style="color: green"> Row 3 Column 2</td>
+        <td style="color: blue"> Row 3 Column 3</td>
+      </tr>
+    </table>
   </body>
+  <br>
+  <br>
+  <br>
   <footer> Created by: Jacob Johnson || HRSF130</footer>
 </html>
 
