Implement Refresh button event listening test

--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -10,7 +10,6 @@
   </header>
   <body>
     <p id="test"> This should be replaced</p>
-    <script id="test" type="text/javascript" src="app.js"></script>
 
     <table>
       <tr>
@@ -29,7 +28,9 @@
         <td style="color: blue"> Row 3 Column 3</td>
       </tr>
     </table>
+    <button id="refresh"> Play Again!</button>
   </body>
+  <script id="test" type="text/javascript" src="app.js"></script>
   <br>
   <br>
   <br>
