Implement WET syntax for table event listeners. Functionality OK

--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -13,19 +13,19 @@
 
     <table>
       <tr>
-        <td style="color: red"> Row 1 Column 1</td>
-        <td style="color: green"> Row 1 Column 2</td>
-        <td style="color: blue"> Row 1 Column 3</td>
+        <td id="cellTest" style="color: red"> Row 1 Column 1</td>
+        <td id="cellTest2" style="color: green"> Row 1 Column 2</td>
+        <td id="cellTest3" style="color: blue"> Row 1 Column 3</td>
       </tr>
       <tr>
-        <td style="color: red"> Row 2 Column 1</td>
-        <td style="color: green"> Row 2 Column 2</td>
-        <td style="color: blue"> Row 2 Column 3</td>
+        <td id="cellTest4" style="color: red"> Row 2 Column 1</td>
+        <td id="cellTest5" style="color: green"> Row 2 Column 2</td>
+        <td id="cellTest6" style="color: blue"> Row 2 Column 3</td>
       </tr>
       <tr>
-        <td style="color: red"> Row 3 Column 1</td>
-        <td style="color: green"> Row 3 Column 2</td>
-        <td style="color: blue"> Row 3 Column 3</td>
+        <td id="cellTest7" style="color: red"> Row 3 Column 1</td>
+        <td id="cellTest8" style="color: green"> Row 3 Column 2</td>
+        <td id="cellTest9" style="color: blue"> Row 3 Column 3</td>
       </tr>
     </table>
     <button id="refresh"> Play Again!</button>
