Implement minimal CSS styling

--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="stylesheet.css">
     <title>Jacob's TicTactToe Mini</title>
   </head>
 
@@ -28,6 +29,7 @@
         <td class="test" id="cellTest9" style="color: blue"> Row 3 Column 3</td>
       </tr>
     </table>
+    <br>
     <button id="refresh"> Play Again!</button>
   </body>
   <script id="test" type="text/javascript" src="app.js"></script>
