Submit current progress on TicTacToe up to HR alloted timebox

--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -14,19 +14,19 @@
 
     <table>
       <tr>
-        <td class="test" id="cellTest" style="color: red"> Row 1 Column 1</td>
-        <td class="test" id="cellTest2" style="color: green"> Row 1 Column 2</td>
-        <td class="test" id="cellTest3" style="color: blue"> Row 1 Column 3</td>
+        <td class="test" id="cellTest" style="color: red"> New Game</td>
+        <td class="test" id="cellTest2" style="color: green"> New Game</td>
+        <td class="test" id="cellTest3" style="color: blue"> New Game</td>
       </tr>
       <tr>
-        <td class="test" id="cellTest4" style="color: red"> Row 2 Column 1</td>
-        <td class="test" id="cellTest5" style="color: green"> Row 2 Column 2</td>
-        <td class="test" id="cellTest6" style="color: blue"> Row 2 Column 3</td>
+        <td class="test" id="cellTest4" style="color: red"> New Game</td>
+        <td class="test" id="cellTest5" style="color: green"> New Game</td>
+        <td class="test" id="cellTest6" style="color: blue"> New Game</td>
       </tr>
       <tr>
-        <td class="test" id="cellTest7" style="color: red"> Row 3 Column 1</td>
-        <td class="test" id="cellTest8" style="color: green"> Row 3 Column 2</td>
-        <td class="test" id="cellTest9" style="color: blue"> Row 3 Column 3</td>
+        <td class="test" id="cellTest7" style="color: red"> New Game</td>
+        <td class="test" id="cellTest8" style="color: green"> New Game</td>
+        <td class="test" id="cellTest9" style="color: blue"> New Game</td>
       </tr>
     </table>
     <br>
